# todo-rs

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Taskfile.yml  compose.yml  gradle.properties  settings.gradle.kts  smithy-build.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: main.ts
model/: build.gradle.kts  smithy-build.json
model/src/main/smithy/: dashboard.smithy  errors.smithy  item.smithy  list.smithy  service.smithy  user.smithy
src/: main.rs  recurrence.rs
src/domain/: item.rs  list.rs  mod.rs  user.rs
src/list/: mod.rs  model.rs  repo.rs
src/list/item/: model.rs
src/storage/: memory.rs  mod.rs  sqlite.rs
