[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
todo-server-sdk = { path = "todo-server-sdk" }
hyper = { version = "0.14", features = ["server", "tcp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mockall = "0.14.0"
async-trait = "0.1.89"
chrono = "0.4.44"
uuid = { version = "1.23.1", features = ["v4"] }

